updating open graph data

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
       name="description"
       content="Mix Ed is a group generator app that makes forming classroom groups easy."
     />
+    <meta property="og:title" content="Mix Ed">
+    <meta property="og:url" content="%PUBLIC_URL%">
     <meta property="og:image" content="%PUBLIC_URL%/logo512.png">
-    <meta property="og:image:type" content="image/png">
+    <meta property="og:type" content="image/png">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
