--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     />
     <meta property="og:title" content="Mix Ed">
     <meta property="og:url" content="%PUBLIC_URL%">
-    <meta property="og:image" content="%PUBLIC_URL%/logo512.png">
+    <meta property="og:image" content="%PUBLIC_URL%/Mix-Ed-Banner.png">
     <meta property="og:type" content="image/png">
-    <meta property="og:image:width" content="512">
-    <meta property="og:image:height" content="512">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
